Mit Colab erstellt

--- a/tutorials/Tutorial3.ipynb
+++ b/tutorials/Tutorial3.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQGsZ9icaDqk",
-        "outputId": "499c7fcc-e83d-4c4b-9222-f885eded9558"
+        "outputId": "eeda2279-b272-43ec-8a4a-88eec93255c3"
       },
       "execution_count": 1,
       "outputs": [
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aPXpCtEfaHI2",
-        "outputId": "8e528a0e-1787-48b6-eecf-95074a5e3261"
+        "outputId": "769502c4-1846-4334-9be1-7e0f7f2f5e7f"
       },
       "execution_count": 2,
       "outputs": [
@@ -215,7 +215,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "38835829-8ad5-47fb-b18a-25cf55899bb8"
+        "outputId": "14747d54-4523-4e31-c9c7-bbf22e44d0e3"
       },
       "execution_count": 3,
       "outputs": [
@@ -277,7 +277,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bcf899de-c288-4c04-dedb-cc0030752c3c"
+        "outputId": "03a25fb5-8c1d-4ae8-d1b5-62921ea8ec2d"
       },
       "execution_count": 4,
       "outputs": [
@@ -327,7 +327,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5fdbed4d-97d3-4b99-f80f-845d7530c4d4"
+        "outputId": "1215aafd-b4ed-44a9-ab8d-4a877ad021e8"
       },
       "execution_count": 5,
       "outputs": [
@@ -384,7 +384,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "338c1c94-0a27-4355-ceea-91b337d2df7c"
+        "outputId": "3e8cdc53-9c8b-473e-d3f7-34b7fefa286d"
       },
       "execution_count": 6,
       "outputs": [
@@ -434,11 +434,13 @@
         "# computer average of each row:\n",
         "average_row = my_first_tensor.sum(dim=1) / my_first_tensor.size(1)\n",
         "print(average_row)\n",
+        "print()\n",
         "\n",
         "# average of each column:\n",
         "average_column = my_first_tensor.sum(dim=0) / my_first_tensor.size(0)\n",
         "print(average_column)\n",
         "print()\n",
+        "\n",
         "# shape of results:\n",
         "print(my_first_tensor.shape)\n",
         "print(average_row.shape)\n",
@@ -449,9 +451,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da780884-888f-4c91-b0dc-f2c337169dc9"
+        "outputId": "076bc5b6-2127-4714-f700-ece26c1de4f5"
       },
-      "execution_count": 39,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,6 +463,7 @@
             "        [ 4.0000, -7.2000,  6.3000]])\n",
             "\n",
             "tensor([4.2667, 1.0333])\n",
+            "\n",
             "tensor([ 2.5000, -2.5000,  7.9500])\n",
             "\n",
             "torch.Size([2, 3])\n",
@@ -531,9 +534,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aAuIkYtYbIP4",
-        "outputId": "227ffc8c-7c18-49e6-9c57-29707b054d5f"
+        "outputId": "6bd732ce-61a0-4133-d9a4-ad7ca6884d6e"
       },
-      "execution_count": 40,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +546,7 @@
             "        [1., 1.]], requires_grad=True)\n",
             "tensor([[3., 3.],\n",
             "        [3., 3.]], grad_fn=<AddBackward0>)\n",
-            "<AddBackward0 object at 0x78ddde287c10>\n",
+            "<AddBackward0 object at 0x783a92f0df90>\n",
             "tensor([[27., 27.],\n",
             "        [27., 27.]], grad_fn=<MulBackward0>) tensor(27., grad_fn=<MeanBackward0>)\n",
             "Gradient of y: \n",
@@ -611,28 +614,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a5a2c02-a629-40b3-fbfd-c5bc37dc2d24"
+        "outputId": "6617d72f-17f0-4459-d30a-c399e61e12f3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-11-19 11:28:50--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2024-11-20 11:43:08--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin [following]\n",
-            "--2024-11-19 11:28:51--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-11-20 11:43:09--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 96769269 (92M) [application/octet-stream]\n",
             "Saving to: ‘word2vec_embeddings.bin’\n",
             "\n",
-            "word2vec_embeddings 100%[===================>]  92.29M  59.1MB/s    in 1.6s    \n",
+            "word2vec_embeddings 100%[===================>]  92.29M   106MB/s    in 0.9s    \n",
             "\n",
-            "2024-11-19 11:28:55 (59.1 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
+            "2024-11-20 11:43:11 (106 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
             "\n",
             "Requirement already satisfied: gensim in /usr/local/lib/python3.10/dist-packages (4.3.3)\n",
             "Requirement already satisfied: numpy<2.0,>=1.18.5 in /usr/local/lib/python3.10/dist-packages (from gensim) (1.26.4)\n",
@@ -681,7 +684,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "153b61cd-0ac0-426b-ee45-803926426071"
+        "outputId": "55161615-b6f1-40df-8131-35f379ca19ec"
       },
       "execution_count": 11,
       "outputs": [
@@ -759,17 +762,16 @@
       "source": [
         "#Your code goes here\n",
         "\n",
-        "dimensions_number = len(model[\"good\"])\n",
-        "print(dimensions_number)"
+        "print(len(model[\"good\"]))"
       ],
       "metadata": {
         "id": "zJdLUqzamYIv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a1292c1-8bc6-46a4-88a7-eb207c18a338"
+        "outputId": "ec7bb06e-be70-49e7-e399-cb3365582963"
       },
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +812,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "045327f9-a0fb-4b79-8ec4-ab3ff2e5dff0"
+        "outputId": "ad494779-2340-4a63-e964-ccaf66b15719"
       },
       "execution_count": 13,
       "outputs": [
@@ -846,7 +848,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yfGt0BDl4AT",
-        "outputId": "efe913b5-e893-415c-8948-9417980656f8"
+        "outputId": "da2c1a68-9b8d-4776-ca6b-bb7b56238abc"
       },
       "execution_count": 14,
       "outputs": [
@@ -891,7 +893,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eac9b016-8e5b-4e65-dc31-09191a93e019"
+        "outputId": "e223dd2d-35a2-487a-c2cf-69f5e991b4c4"
       },
       "execution_count": 15,
       "outputs": [
@@ -950,7 +952,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 524
         },
-        "outputId": "081bfd05-5e93-47ef-cc52-6ab7fa088448"
+        "outputId": "ae6436fd-2e7e-45fa-89ed-b5b40cbd0aec"
       },
       "execution_count": 17,
       "outputs": [
@@ -996,7 +998,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ClSOkeTscsHv",
-        "outputId": "2a2bf92e-259a-478d-e9bc-6c6406cfe930"
+        "outputId": "ce61c154-9cc8-4796-a91d-4a795f703cb5"
       },
       "execution_count": 18,
       "outputs": [
@@ -1004,7 +1006,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x78deb45a4fd0>"
+              "<torch._C.Generator at 0x783a75120f10>"
             ]
           },
           "metadata": {},
@@ -1041,7 +1043,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LPlDrEGcdYcK",
-        "outputId": "814a15eb-9f5b-4a60-d545-5b1691746fbd"
+        "outputId": "c8484e89-7923-4e82-d825-9200923c16d6"
       },
       "execution_count": 19,
       "outputs": [
@@ -1095,7 +1097,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BtU6mphtdeZ_",
-        "outputId": "26bea17f-dc0f-4776-9b8d-07a6540352e3"
+        "outputId": "c261077e-6a16-42f2-9c22-3cf7798f420f"
       },
       "execution_count": 20,
       "outputs": [
@@ -1143,7 +1145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s46z9vK0dmT-",
-        "outputId": "700adea1-474d-48b3-c3df-cf7562a22e21"
+        "outputId": "2cfc4ca0-1fad-4870-ba6e-48fff8d8b895"
       },
       "execution_count": 21,
       "outputs": [
@@ -1207,7 +1209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uXXz7bTIdvjd",
-        "outputId": "2e993ab2-b5e8-4122-9d50-77d47f832031"
+        "outputId": "73e0b016-0410-46d6-83ea-c8bafaa899ff"
       },
       "execution_count": 22,
       "outputs": [
@@ -1240,7 +1242,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5cb74827-6e85-463c-a415-89adab68574b"
+        "outputId": "5bd4c5c6-d47a-4a77-88ed-94e5977037c9"
       },
       "execution_count": 23,
       "outputs": [
@@ -1443,7 +1445,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ss1E4wshLZm",
-        "outputId": "3ef5b6f7-db62-4c79-ba02-07d6c01dd3e7"
+        "outputId": "64891734-c0d0-4f89-9439-f11a15db240d"
       },
       "execution_count": 28,
       "outputs": [
@@ -1569,7 +1571,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96e0e6d3-a1ca-43db-dca6-907ff54948f7"
+        "outputId": "e8049990-f534-4ee2-af81-4626add0ca9f"
       },
       "execution_count": 30,
       "outputs": [
@@ -1612,7 +1614,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6acba54-39bd-4eaf-bee7-77cec9866185"
+        "outputId": "3fcf6f7d-f007-47b5-ea90-df90b48150ea"
       },
       "execution_count": 31,
       "outputs": [
