Mit Colab erstellt

--- a/homeexercise2.ipynb
+++ b/homeexercise2.ipynb
@@ -61,7 +61,7 @@
       ],
       "metadata": {
         "id": "kxwz_cPyW4lG",
-        "outputId": "16bf5424-7a5c-4290-bbe7-db9812d7ad0a",
+        "outputId": "564a3994-3833-4019-b785-9db41940621c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,39 +72,39 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-11-22 17:38:57--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
-            "Resolving github.com (github.com)... 140.82.112.3\n",
-            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "--2024-11-25 13:57:52--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin [following]\n",
-            "--2024-11-22 17:38:58--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2024-11-25 13:57:52--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 96769269 (92M) [application/octet-stream]\n",
             "Saving to: ‘word2vec_embeddings.bin’\n",
             "\n",
-            "word2vec_embeddings 100%[===================>]  92.29M  80.6MB/s    in 1.1s    \n",
+            "word2vec_embeddings 100%[===================>]  92.29M   111MB/s    in 0.8s    \n",
             "\n",
-            "2024-11-22 17:39:00 (80.6 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
+            "2024-11-25 13:57:54 (111 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
             "\n",
-            "--2024-11-22 17:39:00--  http://!wget/\n",
+            "--2024-11-25 13:57:54--  http://!wget/\n",
             "Resolving !wget (!wget)... failed: Name or service not known.\n",
             "wget: unable to resolve host address ‘!wget’\n",
-            "--2024-11-22 17:39:00--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
+            "--2024-11-25 13:57:54--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 272272 (266K) [text/plain]\n",
             "Saving to: ‘HomeExercise2.txt’\n",
             "\n",
-            "HomeExercise2.txt   100%[===================>] 265.89K  --.-KB/s    in 0.007s  \n",
+            "HomeExercise2.txt   100%[===================>] 265.89K  --.-KB/s    in 0.006s  \n",
             "\n",
-            "2024-11-22 17:39:00 (36.4 MB/s) - ‘HomeExercise2.txt’ saved [272272/272272]\n",
+            "2024-11-25 13:57:54 (44.1 MB/s) - ‘HomeExercise2.txt’ saved [272272/272272]\n",
             "\n",
-            "FINISHED --2024-11-22 17:39:00--\n",
-            "Total wall clock time: 0.2s\n",
-            "Downloaded: 1 files, 266K in 0.007s (36.4 MB/s)\n"
+            "FINISHED --2024-11-25 13:57:54--\n",
+            "Total wall clock time: 0.1s\n",
+            "Downloaded: 1 files, 266K in 0.006s (44.1 MB/s)\n"
           ]
         }
       ]
@@ -173,7 +173,7 @@
       ],
       "metadata": {
         "id": "yKHVQpGbxGc7",
-        "outputId": "34ed41a5-31cf-422c-81cd-dcb22eae360d",
+        "outputId": "3b671d95-6a9b-4d46-eb30-f432f09ea3cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -261,7 +261,7 @@
       ],
       "metadata": {
         "id": "knGLoU0kXaZb",
-        "outputId": "5b2c052a-92f5-4285-9ae6-55ca9682fd0e",
+        "outputId": "f5996b19-3ab6-4f40-f8ed-4a278274282e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -341,7 +341,7 @@
       ],
       "metadata": {
         "id": "noalz14AzkQR",
-        "outputId": "f2b9b2df-ef8e-48ea-bc33-e87e3c1d5d8d",
+        "outputId": "68c8ed56-90a0-4d96-98f5-fb92602b1a60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -374,7 +374,7 @@
       ],
       "metadata": {
         "id": "NmyLiSoF0s0e",
-        "outputId": "0681edcc-11eb-4ebd-a4b9-873a0deb1a91",
+        "outputId": "4de0db33-123c-465c-889b-4b4c8e59ed28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -431,15 +431,21 @@
         "print(analogy_glove(\"Athens\", \"Greece\", \"Baghdad\"))\n",
         "print(analogy_glove(\"work\", \"works\", \"talk\"))\n",
         "\n",
-        "# apparently, glvoe models are case-sensitive, so I lowercased all analogies passed to the analogy_glove function.\n",
+        "# Apparently, glove embeddings are case-sensitive, so I lowercased the analogy components\n",
+        "# in the analogy_glove function so that glove can work with it, and I hence also compare the predicted word with the\n",
+        "# lowercase tuple element in the following nested for loop.\n",
         "\n",
         "list_of_all_results_glove = []\n",
         "for category, analogy_tuples in analogies.items():\n",
         "    category_results = []\n",
         "    for analogy_tuple in analogy_tuples:\n",
-        "      predicted_word = analogy_glove(analogy_tuple[0], analogy_tuple[1], analogy_tuple[2])\n",
-        "      list_of_all_results_glove.append(predicted_word == analogy_tuple[3].lower())\n",
-        "      category_results.append(predicted_word == analogy_tuple[3].lower())\n",
+        "      try:\n",
+        "        predicted_word = analogy_glove(analogy_tuple[0], analogy_tuple[1], analogy_tuple[2])\n",
+        "        list_of_all_results_glove.append(predicted_word == analogy_tuple[3].lower())\n",
+        "        category_results.append(predicted_word == analogy_tuple[3].lower())\n",
+        "      except KeyError as e:\n",
+        "        print(f\"Word not found in vocabulary: {e}\")\n",
+        "        continue\n",
         "    category_accuracy = sum(category_results) / len(category_results)\n",
         "    print(f\"For {category}, the accuracy is: {category_accuracy:.2f}\")\n",
         "\n",
@@ -449,7 +455,7 @@
       ],
       "metadata": {
         "id": "dZk0eA3B1ZSV",
-        "outputId": "1445f8d8-92bb-4c4b-83e9-7a0af145d76d",
+        "outputId": "a8a9ab3f-d8b6-4d2c-df4e-c59e10f3d223",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -562,7 +568,8 @@
         ", the accuracy is: 0.56\n",
         "Accuracy for all analogies: 0.62\n",
         "\n",
-        "word2vec performs better in almost all categories, except for the categories \"capital-common-countries\", \"capital-world\" and \"gram6-nationality-adjective\". The overal accuracy (for all analogies) is also higher for the word2vec model than for the gloVe model. This is surprising since the gloVe model is supposed to be a (also small but) more powerful model. It is also interesting to see that the models both performed very poorly on the currency analogies."
+        "word2vec performs better in almost all categories, except for the categories \"capital-common-countries\", \"capital-world\" and \"gram6-nationality-adjective\". word2vec performs especially well for grammatical and geographical relations, whereas gloVe performs best for common capital relationships and nationality ajectives. The overal accuracy (for all analogies) is also higher for the word2vec model than for the gloVe model. This is surprising since the gloVe model is supposed to be a (also small but) more powerful model. Perhaps this results from the type of corpus/ data that the models were trained on and the relationships it covers. Moreover, I read online that the two models use different embedding techniques: word2vec works with local context windows (more focused on context, detail, local relationships) whereas gloVe is count-based model creating and relying on a global co-occurrence matrix (more focused on global semantic relationships). This explains why word2vec was able to capture smaller-scale relationships better (such as city-in-state or comparatives), and why gloVe captured broader relationships better (e.g., capitals).\n",
+        "It is also interesting to see that the models both performed very poorly on the currency analogies. This could be due to sparse or inconsistent training data for both models related to currency."
       ],
       "metadata": {
         "id": "5HevSYbb-4WP"
@@ -625,7 +632,7 @@
       ],
       "metadata": {
         "id": "h5C4yZsN2lAa",
-        "outputId": "671c882a-07bd-419e-b979-3df46ec2afcf",
+        "outputId": "d4f84213-9f46-45c6-a5eb-1ace59b9c8d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 523
@@ -657,14 +664,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The clusters do differ substantially in the way that the clusters and individual embeddings are positioned, but not in the grouping of embeddings (contents of clusters):\n",
-        "\n",
-        "Position of clusters: The clusters (and hence the contained embeddings) are located in different positions on the scales of the two visualisations.\n",
+        "The clusters do differ substantially in the way that the clusters and individual embeddings are positioned, but not so much in the grouping of embeddings (contents of clusters):\n",
         "\n",
         "Content of clusters: In both visualisations, the words/embeddings that are grouped together are the same ones: one cluster for animals, one cluster for countries, one cluster for food and beverages, etc. However, in the word2vec visualisation from Tutorial 3, it seems that a more significant distinction is made between food (things to eat) and beverages (things to drink), which is not necessarily visible in the GloVe visualisation above (other than that the beverages embeddings are slightly closer to the embedding for \"water\" than the food embeddings).\n",
         "Moreover, the distance between elements of the clusters is slightly different, e.g. the distance between \"horse\" and the other animal embeddings.\n",
         "\n",
-        "In conclusion, one can say that the two models captured similar semantic meanings/word relationships, but that the embedding space (scaling, coordinate system) is different. This makes sense because the models are trained on different datasets and they created their own embeddings based on their training data and hence have their own unique embedding space. and scaling."
+        "Position of clusters: The clusters (and hence the contained embeddings) are located in different positions on the scales of the two visualisations.\n",
+        "\n",
+        "In conclusion, one can say that the two models captured similar semantic meanings/word relationships, but that the embedding space (scaling, coordinate system) is different. This makes sense because the models are trained on different datasets and they created their own embeddings based on their training data and hence have their own unique embedding space and scaling."
       ],
       "metadata": {
         "id": "fupuFQyF-oBg"
@@ -698,7 +705,7 @@
       ],
       "metadata": {
         "id": "bdEoibPg4Ylz",
-        "outputId": "aad89705-d41b-4757-830b-4d65d589803c",
+        "outputId": "099b9235-6b9a-44bc-ba2f-f70ad89833be",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -734,18 +741,18 @@
         "print(f\"womans is to skirt as man is to {result4}\")\n",
         "\n",
         "result5 = model_glove.most_similar(positive=[\"white\", \"africa\"], negative=[\"europe\"], topn=3)\n",
-        "print(f\"Europe is to Portuguese as Asia is to {result5}\")\n",
+        "print(f\"Europe is to white as Africa is to {result5}\")\n",
         "result6 = model.most_similar(positive=[\"white\", \"Africa\"], negative=[\"Europe\"], topn=3)\n",
-        "print(f\"Europe is to Portuguese as Asia is to {result6}\")"
+        "print(f\"Europe is to white as Africa is to {result6}\")"
       ],
       "metadata": {
         "id": "IVvhsv5u7wHA",
-        "outputId": "48a5274f-c233-490f-9f24-99b54c5ac222",
+        "outputId": "ba2d0c07-8ef6-47ef-a0b0-2bf8d9042145",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 167,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,8 +760,8 @@
           "text": [
             "woman is to skirt as man is to [('pants', 0.7425739169120789), ('skirts', 0.7323346734046936), ('jacket', 0.7198992967605591)]\n",
             "womans is to skirt as man is to [('skirts', 0.5708129405975342), ('hem', 0.48839494585990906), ('pants', 0.4686371386051178)]\n",
-            "Europe is to Portuguese as Asia is to [('black', 0.6631033420562744), ('african', 0.6510544419288635), ('brown', 0.6201004981994629)]\n",
-            "Europe is to Portuguese as Asia is to [('black', 0.68289715051651), ('African', 0.5435546636581421), ('brown', 0.5248365998268127)]\n"
+            "Europe is to white as Africa is to [('black', 0.6631033420562744), ('african', 0.6510544419288635), ('brown', 0.6201004981994629)]\n",
+            "Europe is to white as Africa is to [('black', 0.68289715051651), ('African', 0.5435546636581421), ('brown', 0.5248365998268127)]\n"
           ]
         }
       ]
@@ -762,7 +769,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It is interesting to see that regarding the \"skirt\"-example, the GloVe model is more biased than the word2vec model, and that in the case of the \"Europe\"/\"Africa\" example, both models are biased."
+        "Both models learned from training data that some clothing items are stereotypically considered masculine (e.g., \"pants\", \"jacket\") and that there are also stereotypically considered female items such as \"skirt\". However, it seems like the GloVe model is a little more biased than the word2vec model in this case since the word \"pants\" (a stereotypically male piece of clothing) is \"only\" the third most similar word for word2vec, but the first one for GloVe.\n",
+        "\n",
+        "In the case of the \"Europe\"/\"Africa\" example, both models are biased: They reinforce racial stereotypes and reduce geographical regions to specific races."
       ],
       "metadata": {
         "id": "iqYJAogrbRTq"
