Mit Colab erstellt

--- a/homeexercise2.ipynb
+++ b/homeexercise2.ipynb
@@ -61,7 +61,7 @@
       ],
       "metadata": {
         "id": "kxwz_cPyW4lG",
-        "outputId": "564a3994-3833-4019-b785-9db41940621c",
+        "outputId": "9477b35f-cfcd-4de4-9c61-1f0507e78aa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,39 +72,39 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-11-25 13:57:52--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "--2024-11-25 14:47:31--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
+            "Resolving github.com (github.com)... 140.82.114.4\n",
+            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin [following]\n",
-            "--2024-11-25 13:57:52--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
+            "--2024-11-25 14:47:31--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 96769269 (92M) [application/octet-stream]\n",
-            "Saving to: ‘word2vec_embeddings.bin’\n",
+            "Saving to: ‘word2vec_embeddings.bin.1’\n",
             "\n",
-            "word2vec_embeddings 100%[===================>]  92.29M   111MB/s    in 0.8s    \n",
+            "word2vec_embeddings 100%[===================>]  92.29M   236MB/s    in 0.4s    \n",
             "\n",
-            "2024-11-25 13:57:54 (111 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
+            "2024-11-25 14:47:32 (236 MB/s) - ‘word2vec_embeddings.bin.1’ saved [96769269/96769269]\n",
             "\n",
-            "--2024-11-25 13:57:54--  http://!wget/\n",
+            "--2024-11-25 14:47:32--  http://!wget/\n",
             "Resolving !wget (!wget)... failed: Name or service not known.\n",
             "wget: unable to resolve host address ‘!wget’\n",
-            "--2024-11-25 13:57:54--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
+            "--2024-11-25 14:47:32--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 272272 (266K) [text/plain]\n",
-            "Saving to: ‘HomeExercise2.txt’\n",
+            "Saving to: ‘HomeExercise2.txt.1’\n",
             "\n",
-            "HomeExercise2.txt   100%[===================>] 265.89K  --.-KB/s    in 0.006s  \n",
+            "HomeExercise2.txt.1 100%[===================>] 265.89K  --.-KB/s    in 0.009s  \n",
             "\n",
-            "2024-11-25 13:57:54 (44.1 MB/s) - ‘HomeExercise2.txt’ saved [272272/272272]\n",
+            "2024-11-25 14:47:32 (29.4 MB/s) - ‘HomeExercise2.txt.1’ saved [272272/272272]\n",
             "\n",
-            "FINISHED --2024-11-25 13:57:54--\n",
+            "FINISHED --2024-11-25 14:47:32--\n",
             "Total wall clock time: 0.1s\n",
-            "Downloaded: 1 files, 266K in 0.006s (44.1 MB/s)\n"
+            "Downloaded: 1 files, 266K in 0.009s (29.4 MB/s)\n"
           ]
         }
       ]
@@ -173,7 +173,7 @@
       ],
       "metadata": {
         "id": "yKHVQpGbxGc7",
-        "outputId": "3b671d95-6a9b-4d46-eb30-f432f09ea3cb",
+        "outputId": "c4bc7d56-e335-4da8-bb4f-653e126c4509",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -248,9 +248,13 @@
         "for category, analogy_tuples in analogies.items():\n",
         "    category_results = []\n",
         "    for analogy_tuple in analogy_tuples:\n",
-        "      predicted_word = analogy(analogy_tuple[0], analogy_tuple[1], analogy_tuple[2])\n",
-        "      list_of_all_results.append(predicted_word == analogy_tuple[3])\n",
-        "      category_results.append(predicted_word == analogy_tuple[3])\n",
+        "      try:\n",
+        "        predicted_word = analogy(analogy_tuple[0], analogy_tuple[1], analogy_tuple[2])\n",
+        "        list_of_all_results.append(predicted_word == analogy_tuple[3])\n",
+        "        category_results.append(predicted_word == analogy_tuple[3])\n",
+        "      except KeyError as e:\n",
+        "        print(f\"Word not found in vocabulary: {e}\")\n",
+        "        continue\n",
         "    category_accuracy = sum(category_results) / len(category_results)\n",
         "    print(f\"For {category}, the accuracy is: {category_accuracy:.2f}\")\n",
         "\n",
@@ -261,7 +265,7 @@
       ],
       "metadata": {
         "id": "knGLoU0kXaZb",
-        "outputId": "f5996b19-3ab6-4f40-f8ed-4a278274282e",
+        "outputId": "7128f1d5-e665-4ec2-a0f2-2c1cbc725a6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -341,7 +345,7 @@
       ],
       "metadata": {
         "id": "noalz14AzkQR",
-        "outputId": "68c8ed56-90a0-4d96-98f5-fb92602b1a60",
+        "outputId": "b102f304-dc90-4a63-b144-008a007e0208",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -352,7 +356,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[==================================================] 100.0% 128.1/128.1MB downloaded\n",
             "<class 'gensim.models.keyedvectors.KeyedVectors'>\n"
           ]
         }
@@ -374,7 +377,7 @@
       ],
       "metadata": {
         "id": "NmyLiSoF0s0e",
-        "outputId": "4de0db33-123c-465c-889b-4b4c8e59ed28",
+        "outputId": "a9a6fca6-6ec1-4a25-c705-3c757bf52080",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -455,7 +458,7 @@
       ],
       "metadata": {
         "id": "dZk0eA3B1ZSV",
-        "outputId": "a8a9ab3f-d8b6-4d2c-df4e-c59e10f3d223",
+        "outputId": "f364a852-d346-47e8-955b-7f243df7fec0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -632,7 +635,7 @@
       ],
       "metadata": {
         "id": "h5C4yZsN2lAa",
-        "outputId": "d4f84213-9f46-45c6-a5eb-1ace59b9c8d1",
+        "outputId": "2cd53706-febe-4265-c50f-4d42e080014f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 523
@@ -705,7 +708,7 @@
       ],
       "metadata": {
         "id": "bdEoibPg4Ylz",
-        "outputId": "099b9235-6b9a-44bc-ba2f-f70ad89833be",
+        "outputId": "fa18823c-e411-4ab8-9649-cd1e7b7445c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -747,7 +750,7 @@
       ],
       "metadata": {
         "id": "IVvhsv5u7wHA",
-        "outputId": "ba2d0c07-8ef6-47ef-a0b0-2bf8d9042145",
+        "outputId": "c56af758-a298-4254-ce2d-d09003fc4520",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
